[package]
name = "furiosa-device-python"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "furiosa_native_device"
crate-type = ["cdylib"]

[dependencies]
furiosa-device = { workspace = true }
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
git2 = { workspace = true }
